set columns to min-width 0 to prevent eager overflowing

--- a/packages/apostrophe/modules/@apostrophecms/layout-widget/ui/src/layout.css
+++ b/packages/apostrophe/modules/@apostrophecms/layout-widget/ui/src/layout.css
@@ -15,6 +15,7 @@
   /* stylelint-disable-next-line declaration-block-no-redundant-longhand-properties */
   align-self: var(--align);
   order: var(--order, 0);
+  min-width: 0;
 }
 
 /* Tablet rules. Override $layout-breakpoint-tablet to change. */
